--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "license": "MIT",
     "description": "Hash File Wrapper for Neos Fusion",
     "require": {
-        "neos/fusion": "~3.0 || ~4.0 || ~5.0 || ^7.0"
+        "neos/fusion": "~3.0 || ~4.0 || ~5.0 || ^7.0 || ^8.0"
     },
     "autoload": {
         "psr-4": {
